--- a/Assets/index.html
+++ b/Assets/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
   <head>
-    <title>Coding Quiz</title>
+   
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" />
+    <title>Coding Quiz</title>
 
   </head>
   <body>
-<div class="quiz_box">
+    <div class="quiz_box">
     <header>
-        <div class="timer"><span id="timer"></span>
-            <div id="timerDisplay"></div>
-
-            <!-- <div class="time_text">Time Left</div>
-            <div class="timer_sec">15</div> -->
-            
-        </div>       
+    
     </header>
 
 
-    <h2 id="test_status"></h2>
-    <div id="test"></div>
 
     <script src="script.js"></script>
 </div>
