Changing the background

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -8,11 +8,23 @@
     <title>Coding Quiz</title>
 
   </head>
+
+
+  <header>
+    <!-- Add Timer-->
+    <!-- <div class="timer">
+        <h3 class>Time Remaining</h3>
+    <div id="timerDisplay">60</div> -->
+    </div>
+</header>
   <body>
+ 
     <div class="quiz_box">
-    <header>
-    
-    </header>
+
+    <h2 id="test_status"></h2>
+    <div id="test"></div>
+
+  
 
 
 
