--- a/Assets/index.html
+++ b/Assets/index.html
@@ -11,15 +11,28 @@
 
 
   <header>
-    <!-- Add Timer-->
-    <!-- <div class="timer">
-        <h3 class>Time Remaining</h3>
-    <div id="timerDisplay">60</div> -->
-    </div>
+
+   
 </header>
   <body>
- 
-    <div class="quiz_box">
+ <div class="clearfix">
+    <div class="container">
+        <div class="row">   
+        <div class="col-md-4">
+        <div class="quiz_box">
+            
+
+
+                    <!-- <div class="row">
+            <div class="col-md-8">
+                <h3 class>Time Remaining</h3>
+                <div id="timerDisplay">60</div> -->
+            </div>
+            </div>
+        </div>
+
+    </div>
+  
 
     <h2 id="test_status"></h2>
     <div id="test"></div>
@@ -29,6 +42,7 @@
 
 
     <script src="script.js"></script>
+</div>
 </div>
   </body>
 </html>
