--- a/Assets/index.html
+++ b/Assets/index.html
@@ -17,42 +17,34 @@
       <div class="row">
     
         <div id="scoreBox">
-            <h4>Time Remaining: <span id="timeLeft"></span></h4>
+            <h4> Time Remaining: <span id="timeLeft"> 60 </span></h4>
             </div>
     </nav>
   </header>
 
   <body>
  <div class="clearfix">
-    <div class="container-fluid">
+ <div class="container-fluid">
       <div id="rules">
-      <div class="row">
-    </div>
-    <p>
-        <h1>Ready for the Minute-Quiz?</h1>
-        <p><h4>Test your knowledge of basic coding in this minute coding quiz. For every question you get wrong, 10 seconds will be deducted from your total time. Your highscore is your remaining time. Have fun!</h4></p>
-        <button type="button" class="btn btn-primary" id="startButton">
-            Start Quiz
-          </button>  
-        </p> 
+        <div class="row">
+   
+     <section>
+       <!--Start Page-->
+      <div id="container">
+        <div id="quizContainer">
+          <p>
+            <h1>Ready for the Minute-Quiz?</h1>
+            <p><h4>Test your knowledge of basic coding in this minute coding quiz. For every question you get wrong, 10 seconds will be deducted from your total time. Your highscore is your remaining time. Have fun!</h4></p>
+            <button type="button" class="btn btn-primary" id="startButton">
+                Start Quiz
+              </button> 
+        </div>
+      </div>
 
-        <!-- <div id="test"> -->
+   
+  
 
-          <!-- <div class="row" id="question1">
-            <div class="col-sm-12" id="gameShow">
-                <div class="card">
-                    <div class="cardHeader" id="questionGoesHere">
-                        <h4>Commonly used data types DO NOT include:</h4>
-                    </div>
-                    <div class="card-body" id="questionZone">
-                        <button class="answerButton">Strings</button>
-                        <button class="answerButton">Booleans</button>
-                        <button class="answerButton">Numbers</button>
-                        <button class="answerButton correctAnswer">Alerts</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+     
 
 
         </div>
